--- a/code/eeSurv_model_visual.Rmd
+++ b/code/eeSurv_model_visual.Rmd
@@ -29,36 +29,60 @@ source("color_map.R")
 source("ggplot_theme.R")
 ```
 
-## Load data
+## Load data & combine female and male events
 
 ```{r}
-eelife <- read.table('../data/processed/Female_events_eelife.txt',
+# Female data
+eelifeF <- read.table('../data/processed/Female_events_eelife.txt',
                      sep = "\t", header = TRUE,
                      stringsAsFactors = FALSE) 
 
 # the diet combination column is tripped in the functions, recreate it
-eelife <- eelife %>%
+eelifeF <- eelifeF %>%
   unite(lvadComb, larvalTreat, adultTreat, sep = "_", remove = FALSE)
+
+# Male data
+eelifeM <- read.table('../data/processed/Male_events_eelife.txt',
+                     sep = "\t", header = TRUE,
+                     stringsAsFactors = FALSE) 
+
+# the diet combination column is stripped in the functions, recreate it
+eelifeM <- eelifeM %>%
+  unite(lvadComb, larvalTreat, adultTreat, sep = "_", remove = FALSE)
+
+# Merge data
+eelife <- bind_rows(eelifeF,eelifeM) %>%
+  select(-carriedM, -carriedF)
+
+eelife$carried <- 0 
+
+write.csv(eelife, file="../data/processed/eeAlldat.csv")
 ```
 
 # Density
 
 ```{r, dens}
-ggplot(eelife, aes(NewAge, fill = lvadComb)) + 
+ggplot(eelife, aes(NewAge, color = lvadComb)) + 
   geom_density(alpha = 0.5) +
-  coord_cartesian(xlim = c(-5, 101), ylim = c(0, 0.04)) + #adjust frame of x-axis
-  scale_x_continuous(expand = c(0, 0), limits = c(-3, 100)) + #limit plot area on x-axix
+  coord_cartesian(xlim = c(-10, 120), ylim = c(0, 0.03)) + 
+  #adjust frame of x-axis
+  
+  scale_x_continuous(expand = c(0, 0), limits = c(-10, 120)) +
+  expand_limits(x=125) +
+  #limit plot area on x-axis
+  
   scale_y_continuous(expand = c(0, 0)) +
   tx_color_map() +
   theme(axis.title = element_text(size = 12)) +
   xlab("Age (days)") +
   ylab("Density") +
-  theme(legend.position = c(0.1, 0.9))
+  theme(legend.position = c(0.7, 0.8))
+  #element.text = 12
   #tx_fill_map() +
   #my_theme
 
-#ggsave(last_plot(), file = "../../Figures/density_all-life_data.pdf",
-       #width = 4, height = 4)
+ggsave(last_plot(), file = "../Figures/density_all-life_data.pdf",
+       width = 4, height = 4)
 ```
 
 # Kaplan-Meier by diet plot with survminer
@@ -72,15 +96,16 @@ ee.comb <- survfit(Surv(NewAge, status == 2) ~ lvadComb,
                    error = "greenwood",
                    data = eelife)
 # h2.diet
-summary(ee.comb)$table
+str(summary(ee.comb)$table)
 
 # median for each treatment
 summary(ee.comb)$table[, "median"]
 
-# survival
+# survival plot for treatment combinations
 ee.comb_plot <- ggsurvplot(ee.comb, data = eelife, 
                      conf.int = FALSE,
-                     palette = c("#999999", "#E69F00", "#56B4E9", "#009E73"),
+                     palette = c("#999999", "#E69F00", 
+                                 "#56B4E9", "#009E73"),
                      fun = "pct", 
                      surv.median.line = "hv",
                      font.y = c(14),
@@ -102,7 +127,7 @@ ee.comb_plot
 
 
 
-# by larval diet only
+# survival by larval diet only
 ee.larv <- survfit(Surv(NewAge, status == 2) ~ larvalTreat,
                    conf.int = 0.95,
                    type = "kaplan-meier",
@@ -117,7 +142,8 @@ summary(ee.larv)$table[, "median"]
 # survival
 ee.larv_plot <- ggsurvplot(ee.larv, data = eelife, 
                      conf.int = FALSE,
-                     palette = c("#999999", "#E69F00", "#56B4E9", "#009E73"),
+                     palette = c("#999999", "#E69F00", 
+                                 "#56B4E9", "#009E73"),
                      fun = "pct", 
                      surv.median.line = "hv",
                      font.y = c(14),
@@ -129,7 +155,7 @@ ee.larv_plot <- ggsurvplot(ee.larv, data = eelife,
 ee.larv_plot
 
 
-# by adult diet only
+# survival by adult diet only
 ee.adul <- survfit(Surv(NewAge, status == 2) ~ adultTreat,
                    conf.int = 0.95,
                    type = "kaplan-meier",
@@ -144,7 +170,8 @@ summary(ee.adul)$table[, "median"]
 # survival
 ee.adul_plot <- ggsurvplot(ee.adul, data = eelife, 
                      conf.int = FALSE,
-                     palette = c("#999999", "#E69F00", "#56B4E9", "#009E73"),
+                     palette = c("#999999", "#E69F00", 
+                                 "#56B4E9", "#009E73"),
                      fun = "pct", 
                      surv.median.line = "hv",
                      font.y = c(14),
@@ -154,12 +181,38 @@ ee.adul_plot <- ggsurvplot(ee.adul, data = eelife,
                      legend.title = "Adult Diet") +
   xlab("Age (days)")
 ee.adul_plot
+
+# survival by line
+ee.line <- survfit(Surv(NewAge, status == 2) ~ id,
+                   conf.int = 0.95,
+                   type = "kaplan-meier",
+                   error = "greenwood",
+                   data = eelife)
+summary(ee.line)$table
+
+# median for each treatment
+summary(ee.line)$table[, "median"]
+
+# survival
+ee.line_plot <- ggsurvplot(ee.line, data = eelife, 
+                     conf.int = FALSE,
+                     #palette = c("#999999", "#E69F00", 
+                     #            "#56B4E9", "#009E73"),
+                     fun = "pct", 
+                     surv.median.line = "hv",
+                     font.y = c(14),
+                     risk.table = FALSE,
+                     legend = c(0.9, 0.8),
+                     #legend.labs = c("C", "DR", "HS"),
+                     legend.title = "Adult Diet") +
+  xlab("Age (days)")
+ee.line_plot
 ```
 
 # Bayesian survival models
 
 ```{r brm_models, cache=TRUE}
-library(brms)
+#library(brms)
 
 eelife_2 <- eelife %>% 
   filter(status == 2) %>% 
@@ -174,11 +227,23 @@ if (FALSE) {
              family = weibull(),
              inits = "0",
              cores = 4)
-  bm2 <- brm(NewAge | cens(censored) ~ diet,
+  bm2 <- brm(NewAge | cens(censored) ~ adultTreat,
              data = eelife_2,
              family = weibull(),
              inits = "0",
              cores = 4)
+  bm3 <- brm(NewAge | cens(censored) ~ larvalTreat,
+             data = eelife_2,
+             family = weibull(),
+             inits = "0",
+             cores = 4)
+  bm4 <- brm(NewAge | cens(censored) ~ lvadComb,
+             data = eelife_2,
+             family = weibull(),
+             inits = "0",
+             cores = 4)
+  
+  #stop here
   bm3 <- brm(NewAge | cens(censored) ~ diet + (1 | sireid),
              data = eelife_2,
              family = weibull(),
@@ -200,11 +265,11 @@ if (FALSE) {
              family = weibull(),
              inits = "0",
              cores = 4)
-  loo_comp <- loo(bm1, bm2, bm3, bm4, bm5, bm6)
-  model_wts <- model_weights(bm1, bm2, bm3, bm4, bm5, bm6)
+  loo_comp <- loo(bm1, bm2, bm3, bm4)
+  model_wts <- model_weights(bm1, bm2, bm3, bm4)
 
   save(list = c("bm1", "bm2", "bm3", "bm4", "bm5", "bm6", "loo_comp", "model_wts"),
-       file = "../../Data/Processed/Surv_models_bayes.Rda")
+       file = "../Data/Processed/Surv_models_bayes.Rda")
 }
 ```
 
