--- a/scripts/eeBayes.Rmd
+++ b/scripts/eeBayes.Rmd
@@ -2,7 +2,15 @@
 title: "Bayesian analysis of early experience experiment"
 author: "Enoch Ng'oma"
 date: "3/3/2019"
-output: html_document
+output: 
+  html_document:
+    toc: true
+    toc_depth: 2 #defaults to 3 if not specified
+    toc_float: true
+    number_sections: true
+    fig_width: 7
+    fig_height: 6
+    fig_caption: true
 ---
 
 ```{r setup, include=FALSE}
@@ -153,48 +161,35 @@ looSingle <- loo(slmMod)
 
 ```
 
-#  MODEL 2
+#  Multi-level model
 
 ```{r}
-# Two-level HLM: predicting valence from arousal with person-specific variation 
-#     repeated measures nested in person (day-level measures, drawn 14 times) 
-# # # # # # # # # # # # # # # # # #
-# # # # # # # # # # # # # # # # # #
+# Predicting lifespan from treatment with diet-specific variation 
 
-#------------------------
-# Steps 1 & 2 (performed jointly)
-#   1. Specify model formula and prior distributions (defaults here)
-#   2. Estimate model
-#------------------------
-
-# Run model 2 with lmer 
-# note: uncomment the line with 'cores' to run chains in parallel (saves time)
-TwoLevelModel <- stan_lmer(valence ~ arousal + (1 + arousal | PID), data = dat)
+tlMod <- stan_glmer(age ~ larv_adult + 
+                          (1 + larv_adult | cageID), 
+                          data = eelife)
 
 # View summary of priors used
-prior_summary(TwoLevelModel)
+prior_summary(tlMod)
 
-
-#------------------------
-#Step 3. 
-# Check sampling quality
-#------------------------
+pairs(tlMod, pars = c("y", "x[1]", "lp__"), las = 1)
 
 
 # Check sampling quality and results
-summary(TwoLevelModel)
-summaryTwoLevelModel<-summary(TwoLevelModel)
+summary(tlMod)
+summaryTLmod<-summary(tlMod )
 
 # Check convergence statistics - R-hat and ESS
-print(summaryTwoLevelModel[, c("mcse", "Rhat", "n_eff")])
+print(summaryTLmod[, c("mcse", "Rhat", "n_eff")])
 
 # Explore trace plots: for example, the covariance matrix
-plot(TwoLevelModel, "trace", regex_pars = "Sigma")
+plot(tlMod, "trace", regex_pars = "Sigma")
 
 # for a particular participant 
 # (the parameters are person-specific deviations from the population parameters)
 color_scheme_set("mix-brightblue-red")
-plot(TwoLevelModel, "trace", regex_pars = "PID:19", 
+plot(tlMod, "trace", regex_pars = "PID:19", 
      facet_args = list(nrow = 2))
 
 # Or just simply use shinystan to explore the results
@@ -203,7 +198,7 @@ launch_shinystan(TwoLevelModel)
 
 # Posterior predictive plot
 color_scheme_set("purple")
-pp_dist2 <- pp_check(TwoLevelModel, nreps=1000) + xlab("valence")
+pp_dist2 <- pp_check(tlMod, nreps=1000) + xlab("Lifespan")
 plot(pp_dist2)
 
 # compare to model 1
@@ -214,34 +209,33 @@ comparison <- bayesplot_grid(
   subtitles = c("Single-level model", "Two-level model"), 
   grid_args = list(ncol = 2)
 )
-ggsave(plot = comparison, filename = "plots/ppc_compare.pdf", 
+ggsave(plot = comparison, filename = "../plots/ppc_compare.pdf", 
        width = 8, height = 4)
 
 
-#------------------------
-#Step 4. 
 # Check fit and interpret results
-#------------------------
 # View model summaries - now with different levels of hierarchical output
-#
-#    Large summary table with all parameters, with convergence statistics
-summaryTwoLevelModel <- summary(TwoLevelModel)
-print(TwoLevelModel)
+
+# Large summary table with all parameters, with convergence statistics
+summaryTLmod <- summary(tlMod)
+print(tlMod)
 
 # write.csv(summary2, file = "rstanarm_2HLM_summary.csv") # uncomment to write to csv
 
 # tidy summary tables for HLM parameters 
 #   Population-level estimates
-summaryTwoLevelModelPop <- tidy(TwoLevelModel, intervals=TRUE, prob=.95, parameters = "non-varying")
-print(summaryTwoLevelModelPop, digits = 2)
+summaryTLmodPop <- tidy(tlMod, intervals=TRUE, prob=.95, parameters = "non-varying")
+print(summaryTLmodPop, digits = 2)
 
 #   Variance estimates
-summaryTwoLevelModelVar<- tidy(TwoLevelModel, intervals=TRUE, prob=.95, parameters = "hierarchical")
-print(summaryTwoLevelModelVar, digits = 2)
+summaryTLmodVar<- tidy(tlMod, intervals=TRUE, prob=.95, 
+                       parameters = "hierarchical")
+print(summaryTLmodVar, digits = 2)
 
-#   Person-specific estimates
-summaryTwoLevelModelPerson <- tidy(TwoLevelModel, intervals=TRUE, prob=.95, parameters = "varying")
-print(summaryTwoLevelModelPerson, digits = 2)
+#   Diet-specific estimates
+summaryTLmodDiet <- tidy(tlMod, intervals=TRUE, 
+                         prob=.95, parameters = "varying")
+print(summaryTLmodDiet, digits = 2)
 # uncomment to write to csv
 # write.csv(mod2summarynv, file = "mod2summarynv.csv")
 # write.csv(mod2summaryps, file = "mod2summaryps.csv")
@@ -251,16 +245,16 @@ print(summaryTwoLevelModelPerson, digits = 2)
 launch_shinystan(TwoLevelModel)
 
 
-# Plots for each participant  ----------------------------------------------
+# Plots for each Diet  
 
-PIDs <- sort(unique(dat$PID))
-posterior2 <- as.matrix(TwoLevelModel)
+laad <- sort(unique(eelife$larv_adult))
+posterior2 <- as.matrix(tlMod)
 samp <- posterior2[sample(nrow(posterior2), 100), ]
 
-plotdata <- lapply(PIDs, FUN = function(j) {
+plotdata <- lapply(laad, FUN = function(j) {
   data.frame(
-    alpha = samp[, "(Intercept)"] + samp[, paste0("b[(Intercept) PID:", j, "]")],
-    beta = samp[, "arousal"] + samp[, paste0("b[arousal PID:", j, "]")]
+    alpha = samp[, "(Intercept)"] + samp[, paste0("b[(Intercept) laad:", j, "]")],
+    beta = samp[, "age"] + samp[, paste0("b[age PID:", j, "]")]
   )
 })
 plotdata <- do.call(rbind, plotdata)
