--- a/scripts/eeSurv_model_visual.Rmd
+++ b/scripts/eeSurv_model_visual.Rmd
@@ -490,5 +490,7 @@ write.table(ll.dat, "../../Data/Processed/h2_median_lifespan.txt",
             row.names=FALSE, sep="\t")
 
 ll.dat <- read.table("../../Data/Processed/h2_median_lifespan.txt",
-                   sep="\t", header = TRUE, stringsAsFactors = FALSE) 
+                  sep="\t", header = TRUE, stringsAsFactors = FALSE) 
+
+ss <- noquote(builtins(internal = FALSE))
 ```
