New Scripts and Plots

--- a/scripts/eeSurv_diet_combination.Rmd
+++ b/scripts/eeSurv_diet_combination.Rmd
@@ -31,21 +31,26 @@ source("ggplot_theme.R")
 
 ```{r pressure, echo=FALSE}
 eelifeF <- read.table('~/early_experience/processed/Female_events_eelife.txt',
-                     sep = "\t", header = TRUE,
-                     stringsAsFactors = FALSE) 
+                      sep = "\t", header = TRUE,
+                      stringsAsFactors = FALSE) 
+sexF <- "Female"
 
+eelifeF$Sex <- sexF
 # the diet combination column is stripped in the functions, recreate it
 eelifeF <- eelifeF %>%
   unite(lvadComb, larvalTreat, adultTreat, sep = "_", remove = FALSE)
 
 # Male data
 eelifeM <- read.table('~/early_experience/processed/Male_events_eelife.txt',
-                     sep = "\t", header = TRUE,
-                     stringsAsFactors = FALSE) 
+                      sep = "\t", header = TRUE,
+                      stringsAsFactors = FALSE) 
 
 # the diet combination column is tripped in the functions, recreate it
 eelifeM <- eelifeM %>%
   unite(lvadComb, larvalTreat, adultTreat, sep = "_", remove = FALSE)
+
+sexM <- "Male"
+eelifeM$Sex <- sexM
 
 ```
 
@@ -62,6 +67,7 @@ DRCM <- subset(eelifeM, eelifeM$larvalTreat == "DR" & eelifeM$adultTreat == "C")
 DRDRM <- subset(eelifeM, eelifeM$larvalTreat == "DR" & eelifeM$adultTreat == "DR")
 
 ```
+
 
 
 #Survival By Combination
@@ -107,6 +113,7 @@ eeMedM<-data.frame('Diet'=unlist(lapply(idseeM, function(x) x[2])),
 
 
 EETotalSumFM <- rbind(eeMedF, eeMedM)
+
 ```
 
 #First Plots
@@ -116,11 +123,119 @@ ggplot(EETotalSumFM, aes(x = Diet, y = Median, group = Sex, color = Sex)) +
   geom_line()
 
 ggplot(EETotalSumFM, aes(x = Diet, y = Median)) +
-  geom_boxplot()
+  geom_dotplot(binaxis='y', stackdir='center') +
+  stat_summary()
 
 ggplot(EETotalSumFM, aes(x = Diet, y = Median, color = Sex)) +
   geom_boxplot(notch = TRUE, notchwidth = .5)
+
+EETotalSumFMWide <- spread(EETotalSumFM, Sex, Median)
+
+lifespan_stagger_plot<- ggplot(EETotalSumFM, aes(x = Diet, y = Median, color = Diet)) +
+  geom_dotplot(binaxis = "y", stackdir='center', dotsize = .85, position = position_jitterdodge(dodge.width = 3)) 
+
+lifespan_stagger_plot
+
+lifespan_stagger_plot + 
+  stat_summary(data = EETotalSumFM, fun.data = "mean_sdl", geom = "errorbar", width =0.3)
+
+ggplot(EETotalSumFM, aes(x = Diet, y = Median, color = Diet, group = Sex)) +
+  geom_point(position = "dodge") +
+  geom_errorbar(ymin = EEposition = "dodge")
+
+
 ```
+
+
+#Working with Diet Combinations Combined
+```{r}
+eelife <- bind_rows(eelifeF,eelifeM)
+
+CC <- subset(eelife, eelife$larvalTreat == "C" & eelife$adultTreat == "C")
+CDR <- subset(eelife, eelife$larvalTreat == "C" & eelife$adultTreat == "DR")
+DRC <- subset(eelife, eelife$larvalTreat == "DR" & eelife$adultTreat == "C")
+DRDR <- subset(eelife, eelife$larvalTreat == "DR" & eelife$adultTreat == "DR")
+
+eeSurv <- survfit(Surv(NewAge, status == 2) ~ lvadComb,
+                  conf.type = "log", 
+                  conf.int = 0.95,
+                  type = "kaplan-meier",
+                  error = "greenwood",
+                  data = eelife)
+
+summary(eeSurv)
+
+eeSum <- summary(eeSurv)$table[, "median"]
+
+idsee<-strsplit(names(eeSum), split="=", fixed=TRUE)
+
+eeMed<-data.frame('Diet'=unlist(lapply(idseeF, function(x) x[2])),
+                  'Median'=eeSum, stringsAsFactors=FALSE)
+
+ggplot(eeMed, aes(x = Diet, y = Median, color = Diet)) +
+  geom_dotplot(binaxis = "y", stackdir='center', dotsize = .85) +
+  stat_summary(data = EETotalSumFM, fun.data = "mean_sdl", geom = "errorbar", width =0.3)
+```
+
+
+#Integrating Median into the original plot
+```{r}
+eelifeF$Lifespan <- ifelse(eelifeF$status >=2, eelifeF$NewAge, 0)
+
+eelifeM$Lifespan <- ifelse(eelifeM$status >=2, eelifeM$NewAge, 0)
+
+#Means, SD, min, max
+eelifespanF <- data.frame(
+aggregate(Lifespan~lvadComb, data=eelifeF, min),
+aggregate(Lifespan~lvadComb, data=eelifeF, max),
+aggregate(Lifespan~lvadComb, data=eelifeF, mean),
+aggregate(Lifespan~lvadComb, data = eelifeF, sd))
+
+eelifespanF <- eelifespanF[,c(1,2,4,6, 8)]
+
+colnames(eelifespanF) <- c("Diet", "Min", "Max", "Mean", "SD")
+
+eelifespanF$Sex <-sexF
+
+eelifespanM <- data.frame(
+aggregate(Lifespan~lvadComb, data=eelifeM, min),
+aggregate(Lifespan~lvadComb, data=eelifeM, max),
+aggregate(Lifespan~lvadComb, data=eelifeM, mean),
+aggregate(Lifespan~lvadComb, data = eelifeM, sd))
+
+eelifespanM <- eelifespanM[,c(1,2,4,6, 8)]
+
+colnames(eelifespanM) <- c("Diet", "Min", "Max", "Mean", "SD")
+
+eelifespanM$Sex <-sexM
+
+eelifespan <- rbind(eelifespanF, eelifespanM)
+```
+
+#Attempting new plots with new data frames
+```{r}
+ggplot(eelifespan, aes(x = Diet, y = Mean, color = Diet)) +
+  geom_dotplot(binaxis = "y", stackdir='center', dotsize = .85, position = position_dodge(width = .5)) +
+  geom_errorbar(aes(ymin = Mean - SD, ymax = Mean + SD), width = 0.3, position = position_dodge(width = .5))
+
+#Modulated by Sex
+ggplot(eelifespan, aes(x = Diet, y = Mean, color = Diet, group = Sex)) +
+  geom_dotplot(binaxis = "y", stackdir='center', dotsize = .85, position = position_dodge()) +
+  geom_errorbar(aes(ymin = Mean - SD, ymax = Mean + SD), width = 0.3, position = position_dodge())
+
+#With Jitterdodge
+ggplot(eelifespan, aes(x = Diet, y = Mean, color = Diet)) +
+  geom_dotplot(binaxis = "y", stackdir='center', dotsize = .85, position = position_jitterdodge(.1)) +
+  geom_errorbar(aes(ymin = Mean - SD, ymax = Mean + SD), width = 0.2, position = position_jitterdodge(.1))
+
+#Enoch's Chunk
+ggplot(eelifespan, aes(x = Diet, y = Mean, color = Diet)) +
+  geom_dotplot(binaxis = "y", stackdir='center', dotsize = .15) +
+  geom_errorbar(aes(ymin = Mean - SD, ymax = Mean + SD), width = 0.2) +
+  geom_jitter(position = position_jitter(width = 0.4), alpha = 1) 
+
+```
+
 
 
 
